; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/core/extr_........libcoreproxy.c_proceed_request.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/core/extr_........libcoreproxy.c_proceed_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.rp_generator_t* }
%struct.rp_generator_t = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*, i64, i32)* }

@H2O_SEND_STATE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i64, i32)* @proceed_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @proceed_request(%struct.TYPE_4__* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.rp_generator_t*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.rp_generator_t*, %struct.rp_generator_t** %9, align 8
  store %struct.rp_generator_t* %10, %struct.rp_generator_t** %7, align 8
  %11 = load %struct.rp_generator_t*, %struct.rp_generator_t** %7, align 8
  %12 = icmp eq %struct.rp_generator_t* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  br label %40

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @H2O_SEND_STATE_ERROR, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %14
  %19 = load %struct.rp_generator_t*, %struct.rp_generator_t** %7, align 8
  %20 = call i32 @detach_client(%struct.rp_generator_t* %19)
  br label %21

21:                                               ; preds = %18, %14
  %22 = load %struct.rp_generator_t*, %struct.rp_generator_t** %7, align 8
  %23 = getelementptr inbounds %struct.rp_generator_t, %struct.rp_generator_t* %22, i32 0, i32 0
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32 (%struct.TYPE_5__*, i64, i32)*, i32 (%struct.TYPE_5__*, i64, i32)** %25, align 8
  %27 = icmp ne i32 (%struct.TYPE_5__*, i64, i32)* %26, null
  br i1 %27, label %28, label %40

28:                                               ; preds = %21
  %29 = load %struct.rp_generator_t*, %struct.rp_generator_t** %7, align 8
  %30 = getelementptr inbounds %struct.rp_generator_t, %struct.rp_generator_t* %29, i32 0, i32 0
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i32 (%struct.TYPE_5__*, i64, i32)*, i32 (%struct.TYPE_5__*, i64, i32)** %32, align 8
  %34 = load %struct.rp_generator_t*, %struct.rp_generator_t** %7, align 8
  %35 = getelementptr inbounds %struct.rp_generator_t, %struct.rp_generator_t* %34, i32 0, i32 0
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %35, align 8
  %37 = load i64, i64* %5, align 8
  %38 = load i32, i32* %6, align 4
  %39 = call i32 %33(%struct.TYPE_5__* %36, i64 %37, i32 %38)
  br label %40

40:                                               ; preds = %13, %28, %21
  ret void
}

declare dso_local i32 @detach_client(%struct.rp_generator_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
